
  * Merge changes from experimental branch. 
  * debian/compat
    - Bump to debhelper v7 compat mode.
  * debian/control
    - Bump debhelper Build-Depends to (>= 7).
    - Replace Recommends: xvncviewer with vnc-viewer for avahi-ui-utils.
      The xvncviewer package is no longer available from the archive
      (superseded by xvnc4viewer). We use the virtual package instead.

 -- Michael Biebl <biebl@debian.org>  Tue, 17 Feb 2009 15:44:07 +0100

avahi (0.6.24-1) experimental; urgency=low

  * New upstream release
  * debian/patches/14_CVE-2008-5081.patch:
    - Removed. Fixed upstream
  * debian/patches/01_avahi-daemon.conf.patch:
    - Updated.
  * debian/patches/02_avahi-ui.disable-translations.patch:
    - Removed. No longer needed
  * Bump libavahi-core soname from 5 to 6

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 14 Dec 2008 22:26:40 +0000

avahi (0.6.23-4) unstable; urgency=low

  * debian/avahi-{daemon,dnsconfd}.postinst
    - When upgrading the init script priorities, check if the service is
      enabled for the default runlevel before removing the old init script
      symlinks to avoid accidentally re-enabling it. (Closes: #499815)

 -- Michael Biebl <biebl@debian.org>  Wed, 14 Jan 2009 23:22:59 +0100

avahi (0.6.23-3) unstable; urgency=low

  [ Loic Minier ]
  * Generate a POT file during build; helps downstreams such as Ubuntu import
    an always up-to-date pot, even we patch the source of upstream forgets to
    do so; from Ubuntu; thanks Martin Pitt; closes: #486908.

  [ Michael Biebl ]
  * debian/avahi-daemon-check-dns.sh
    - Fix quoting error in dns_has_local().
      Thanks to James Westby for the patch. (Closes: #492466)

  [ Sjoerd Simons ]
  * debian/patches/14_CVE-2008-5081.patch
    - Added. Don't abort on receiving an UDP packet with a source port of zero.
      Fixes CVE-2008-5081 (Closes: #508700)

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 14 Dec 2008 19:39:58 +0000

avahi (0.6.23-2) unstable; urgency=low

  * debian/control